--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Hai sayang :)</h2>
-<p>Ini Raihan, han cuma mau kasih tau perasaan ku ke kamu <button><a href="hehe2.html" >klik </a></button></p>
+<p>Ini Raihan, han cuma mau kasih tau perasaan ku ke kamu <a href="hehe2.html" >klik </a></p>
 
 </body>
 </html>
