--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>hai cantik</title>
-  <link rel="stylesheet" href=".../../user/halaman1.css">
+  <link rel="stylesheet" href="halaman1.css">
 </head>
   <body>
     <br><h1>Hai Cantik!</h1>
