--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <br>
     <img class= "hehe" src="https://c.tenor.com/Z8ezUHZzcLoAAAAC/love.gif" />
     <h1>Kamu mau nggak kamu jadi pacarku?</h1>
-    <button id="btn_mau" onclick="alert('Kamu Kek Kontol')" >Mau</button>&nbsp;
+    <button id="btn_mau" onclick="alert('I Love U <3')" >Mau</button>&nbsp;
     <button id="btn_gamau" onclick="gamau(this)" style="position: absolute">
       Gamau
     </button>
